feat: token based security